--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
     "react": "^18.3.1",
+    "react-alice-carousel": "^2.9.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "react-rating-stars-component": "^2.2.0",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
+    "tailwindcss": "^3.4.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
